# SDLC

./: README.md  report.md
sdlc/: pyproject.toml  report.md
sdlc/src/sdlc/: crew.py  main.py
sdlc/src/sdlc/config/: agents.yaml  tasks.yaml
sdlc/tests/: test_yaml.py
src/sdlc/: crew.py  crew_base.py  main.py
src/sdlc/config/: tasks.yaml
