[project]
name = "sdlc"
version = "0.1.0"
description = "SDLC using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
sdlc = "sdlc.main:run"
run_crew = "sdlc.main:run"
train = "sdlc.main:train"
replay = "sdlc.main:replay"
test = "sdlc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
